# android-emulator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  emulator.h  main.cpp
docs/: ADB_GUIDE.md  DEVELOPER_GUIDE.md  GAPPS_GUIDE.md
pulls/: 6.json
scripts/: enable_adb.bat  enable_adb.sh  install_gapps.bat  install_gapps.sh  setup_image.bat  setup_image.sh
src/: adb_config.cpp  adb_config.h  adb_manager.cpp  adb_manager.h  emulator.cpp  emulator.h  frame_buffer.cpp  frame_buffer.h  gapps_config.cpp  gapps_config.h  gapps_manager.cpp  gapps_manager.h  input_handler.cpp  input_handler.h  main.cpp  play_store.cpp  play_store.h  qemu_config.cpp  qemu_config.h  qemu_manager.cpp  qemu_manager.h  root_manager.cpp  root_manager.h  ui_manager.cpp  ui_manager.h  ui_window.cpp  ui_window.h
